tests/baselines/reference/commentEmittingInPreserveJsx1.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    <div>
        // Not Comment
    </div>;
    
    <div>
        // Not Comment
        {
            //Comment just Fine
        }
        // Another not Comment
    </div>;
    
    <div>
        // Not Comment
        {
            //Comment just Fine
            "Hi"
        }
        // Another not Comment
    </div>;
    
    <div>
        /* Not Comment */
        {
            //Comment just Fine
            "Hi"
        }
    </div>;